--- a/src/App.css
+++ b/src/App.css
@@ -12,16 +12,34 @@
 .Container {
   width: 10px;
 }
+.Title-font {
+  font-family: roboto-thin;
+  font-weight:bolder;
+  font-size:5vw;
+  font-weight:lighter;
+  position: absolute;
+  left:40%;
+  text-align: center;
+  top:0%;
+  color:white;
+}
+.Location-label {
+  font-family:roboto-thin;
+  position:absolute;
+  font-size:2vw;
+  color:white;
+  left:30%;   
+  top:20%;
+}
 
 .Textbox{
   font-family: roboto-thin;
-  font-size:25px;
+  font-size:2vw;
   color:white;
-  width:13%;
-  height:4%;
+  width:12vw;
   position:absolute;
   border: transparent;
-  top:20.2%;
+  top:20%;
   left:53.5%;
   border-color: transparent;
   background-color: transparent;
@@ -39,21 +57,18 @@
   position:absolute;
   top:20%;
   left:67%;
-  right:67%;
-  width:35px;
-  height: 35px;
+  width:3vw;
+  height:3vw;
 }
 .Location {
   font-family: roboto-thin;
   color:white;
   position:absolute;
   top:25%;
-  left:35%;
-  right:35%;
-  width:500px;
-  font-size: 40px;
-  font-weight: thin;
+  left:30%;
+  font-size: 3vw;
   text-align: center;
+  width: 50%;
 }
 .Temperature {
   font-family: roboto-thin;
@@ -61,57 +76,40 @@
   position:absolute;
   top:37%;
   left:49%;
-  font-size: 70px;
+  font-size: 5vw;
   font-weight: thin;
   text-align: center;
 }
 .ConditionText {
   font-family: roboto-thin;
   color:white;
-  font-weight: 0px;
-  font-size:40px;
+  font-size:3vw;
   position:absolute;
   top:70%;
-  left:43%;
+  left:30%;
   right:44%;
   text-align: center;
-  width:300px;
+  width:50%;
   text-align: center;
   
 }
 .ConditionIcon {
   position:absolute;
   top:53%;
-  left:49%;
+  left:50%;
   text-align: center;
-  width:150px;
-  height:150px;
+  width:10vw;
+  height:10vw;
 }
-.Weather {
-  position:absolute;
-  top:49%;
-  left:67%;
-  width:70px;
-  height: 70px;
-}
-.Title-font {
-  font-family: roboto-thin;
-  font-weight:bolder;
-  font-size:50px;
-  font-weight:lighter;
-  position: absolute;
-  left:43%;
-  text-align: center;
-  top:0%;
-  color:white;
-}
+
+
 .Initials-font {
   font-family: roboto-thin;
   position:absolute;
   font-weight: bolder;
-  margin-left:90%;
+  left:90%;
   color:white;
-  font-size: 10px;
+  font-size: 1vw;
 }
 
 .Background {
@@ -126,14 +124,7 @@
   height: 100%;
 }
 
-.Location-label {
-  font-family:roboto-thin;
-  position:absolute;
-  font-size:25px;
-  color:white;
-  left:30%;   
-  top:20%;
-}
+
 .onHover:hover{
   transform: scale(1.1);
 }
