--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,17 @@
   color: white;
   position: absolute;
   top: 37%;
-  left: 44%;
+  left: 35%;
+  font-size: 5vw;
+  font-weight: thin;
+  text-align: center;
+}
+.Temperature2 {
+  font-family: roboto-thin;
+  color: white;
+  position: absolute;
+  top: 37%;
+  left: 55%;
   font-size: 5vw;
   font-weight: thin;
   text-align: center;
@@ -137,7 +147,7 @@
     font-weight: bolder;
     font-weight: lighter;
     position: absolute;
-    left: 25%;
+    left: 23%;
     text-align: center;
     top: 0%;
     color: white;
@@ -147,7 +157,7 @@
     position: absolute;
     font-size: 4vw;
     color: white;
-    left: 20%;
+    left: 18%;
     top: 25%;
   }
   .Textbox {
@@ -158,14 +168,14 @@
     position: absolute;
     border: transparent;
     top: 25%;
-    left: 67.5%;
+    left: 65.5%;
     border-color: transparent;
     background-color: transparent;
   }
   .Search {
     position: absolute;
     top: 25%;
-    left: 87%;
+    left: 85%;
     width: 6vw;
     height: 6vw;
   }
@@ -174,17 +184,27 @@
     color: white;
     position: absolute;
     top: 30%;
-    left: 30%;
-    font-size: 6vw;
+    left: 21%;
+    font-size: 4vw;
     text-align: center;
-    width: 50%;
+    width: 70%;
   }
   .Temperature {
     font-family: roboto-thin;
     color: white;
     position: absolute;
-    top: 35%;
-    left: 45%;
+    top: 37%;
+    left: 43%;
+    font-size: 10vw;
+    font-weight: thin;
+    text-align: center;
+  }
+  .Temperature2 {
+    font-family: roboto-thin;
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 43%;
     font-size: 10vw;
     font-weight: thin;
     text-align: center;
@@ -194,8 +214,8 @@
     color: white;
     font-size: 6vw;
     position: absolute;
-    top: 70%;
-    left: 30%;
+    top: 80%;
+    left: 28%;
     right: 44%;
     text-align: center;
     width: 50%;
@@ -203,8 +223,8 @@
   }
   .ConditionIcon {
     position: absolute;
-    top: 53%;
-    left: 45%;
+    top: 67%;
+    left: 43%;
     text-align: center;
     width: 20vw;
     height: 20vw;
